# fullmag

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  compose.yaml  justfile  monolits.md  package.json  pnpm-lock.yaml  py_layer_with_hole.mesh.json  py_layer_with_hole.stl  pyrightconfig.json  readme.md
.agents/: README.md
.agents/workflows/: feature-delivery.workflow.md  physics-first-gate.workflow.md  review-physics-completeness.workflow.md
.github/: copilot-instructions.md
.github/agents/: architecture-guardian.agent.md  bootstrap-implementer.agent.md  physics-guardian.agent.md
.github/instructions/: architecture.instructions.md  physics.instructions.md  rust.instructions.md  web.instructions.md
.github/prompts/: create-adr.prompt.md  create-physics-note.prompt.md  spec-to-ir.prompt.md
.github/workflows/: bootstrap.yml  windows-msi-container.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/frontend/: index.html
apps/desktop/src-tauri/src/: api_sidecar.rs  commands.rs  main.rs
apps/web/: dev-server.mjs  eslint.config.mjs  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/fullmag-api/: Cargo.toml
crates/fullmag-api/src/: artifacts.rs  assets.rs  error.rs  main.rs  preview.rs  quantities.rs  script.rs  session.rs  session_persistence.rs  types.rs
crates/fullmag-authoring/: Cargo.toml
crates/fullmag-bench/: Cargo.toml
crates/fullmag-bench/src/: main.rs
crates/fullmag-cli/: Cargo.toml
crates/fullmag-cli/src/: args.rs  command_bridge.rs  control_room.rs  diagnostics.rs  formatting.rs  interactive_runtime_host.rs  live_workspace.rs  main.rs  orchestrator.rs  python_bridge.rs  runtime_supervisor.rs  step_utils.rs  types.rs
crates/fullmag-engine/: Cargo.toml
crates/fullmag-engine/examples/: exchange_density_study.rs
crates/fullmag-engine/src/: distributed.rs  fdm_demo.rs  fdm_fft.rs  fdm_fft_backend.rs  fdm_fields.rs  fdm_integrators.rs  fdm_problem.rs  fdm_state.rs  fdm_types.rs  fem.rs  fem_afem_loop.rs  fem_edge_topology.rs  fem_error_estimator.rs  fem_face_topology.rs  fem_goal_estimator.rs  fem_hcurl_estimator.rs  fem_size_field.rs  fem_solution_transfer.rs  fem_sparse.rs  hpc_runtime.rs  lib.rs  magnetoelastic.rs  multilayer.rs  newell.rs  studies.rs  telemetry.rs
crates/fullmag-engine/tests/: exchange_density_study.rs  physics_guardrails.rs
crates/fullmag-fdm-sys/: build.rs
crates/fullmag-fem-sys/: Cargo.toml  build.rs
crates/fullmag-ir/: Cargo.toml
crates/fullmag-plan/: Cargo.toml
crates/fullmag-py-core/: Cargo.toml
crates/fullmag-runner/: Cargo.toml
crates/fullmag-runner/src/: antenna_fields.rs  artifact_pipeline.rs  artifacts.rs  capabilities.rs  cpu_reference.rs  dispatch.rs  fem_eigen.rs  fem_reference.rs  interactive_runtime.rs  lib.rs  multilayer_cuda.rs  multilayer_reference.rs  native_fdm.rs  native_fem.rs  preview.rs  quantities.rs  relaxation.rs  runtime_registry.rs  schedules.rs  types.rs
crates/fullmag-runner/src/eigen/: diagnostics.rs  mod.rs  orchestrator.rs  path.rs  tracking.rs  types.rs
crates/fullmag-runner/src/interactive/: backend.rs  cache.rs  checkpoints.rs  commands.rs  display.rs  events.rs  mod.rs  runtime.rs
crates/fullmag-runner/tests/: physics_validation.rs
crates/fullmag-session/: Cargo.toml
crates/fullmag-session/src/: capture.rs  cas.rs  fms.rs  lib.rs  store.rs  types.rs
docker/dev/: Dockerfile
docker/fem-gpu/: Dockerfile
docker/linux-desktop/: Dockerfile
docker/windows-msi/: Dockerfile
docs/: 1_project_scope.md  2_repo_blueprint.md
docs/adr/: 0001-physics-first-dsl.md  0001-physics-first-python-api.md  0002-container-first-monorepo.md  0003-stno-v1-fdm-only.md
docs/physics/: 0000-physics-documentation-standard.md  0050-shared-problem-semantics-and-embedded-python-api.md  0100-mesh-and-region-discretization.md  0150-exchange-only-geometry-and-magnetization-bootstrap.md  0160-shared-geometry-and-magnetization-authoring-semantics.md  0200-llg-exchange-reference-engine.md  0300-gpu-fdm-precision-and-calibration.md  0800-fdm-sot.md  (+30 more)
examples/: _tmp_nanoflower_fem_relax_airbox_robin.py  _tmp_nanoflower_fem_relax_only.py  _tmp_nanoflower_fem_relax_transfer_grid.py  bench_fem_gpu_long.py  dw_track.fm  dw_track.py  exchange_demag_zeeman.py  exchange_relax.py  fem_eigenmodes.py  fem_exchange_demag_zeeman.py  fem_exchange_zeeman.py  generate_layer_with_hole_stl.py  jenkins_vortex_pinning_fem.py  nanoflower.stl  nanoflower_fdm.py  nanoflower_fem.py  nanoflower_fem_quadro.py  nanoflower_study_fem.py  py_layer_1000x1000.py  py_layer_hole_relax_150nm.py  py_layer_hole_relax_150nm_boundary_test.py  py_layer_relax.py  stno_vortex_mtj_postprocess.py  stno_vortex_mtj_workflow.py
native/: CMakeLists.txt
native/backends/fdm/: CMakeLists.txt
native/backends/fdm/include/: context.hpp  kernels.hpp
native/backends/fdm/src/: api.cpp  context.cu  demag_fp32.cu  demag_fp64.cu  error.cpp  exchange_fp32.cu  exchange_fp64.cu  exchange_t0_fp64.cu  exchange_t1_fp64.cu  llg_abm3_fp32.cu  llg_abm3_fp64.cu  llg_dp45_fp32.cu  llg_dp45_fp64.cu  llg_fp32.cu  llg_fp64.cu  llg_rk23_fp32.cu  llg_rk23_fp64.cu  llg_rk4_fp32.cu  llg_rk4_fp64.cu  newell_gpu_fp64.cu  reductions_fp64.cu
native/backends/fdm/tests/: exchange_fp64_parity.cu  heun_fp64_parity.cu  smoke_context.cpp  tier_a_compare.cu  tier_b_compare.cu
native/backends/fem/: CMakeLists.txt
native/backends/fem/include/: context.hpp  kernels.h
native/backends/fem/src/: api.cpp  context.cpp  error.cpp  kernels.cu  mfem_bridge.cpp
native/include/: fullmag_backend.h  fullmag_fdm.h  fullmag_fem.h
scripts/: bench_fem_gpu.sh  build_desktop_linux_container.sh  build_installer_linux.sh  build_installer_linux_container.sh  check_linux_desktop_deps.sh  check_physics_docs_gate.py  check_repo_consistency.py  dev-control-room.sh  dev-shell.sh  export_fem_gpu_runtime.sh  package_fullmag_host.sh  package_fullmag_portable.sh  run_python_ir_smoke.py  stop-control-room.sh  test-cuda-native.sh
(+608 files in other folders)
