[workspace]
members = [
  "crates/fullmag-api",
  "crates/fullmag-cli",
  "crates/fullmag-ir",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
