[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/fullmag-authoring",
  "crates/fullmag-api",
  "crates/fullmag-cli",
  "crates/fullmag-engine",
  "crates/fullmag-fdm-demag",
  "crates/fullmag-fdm-sys",
  "crates/fullmag-fem-sys",
  "crates/fullmag-ir",
  "crates/fullmag-plan",
  "crates/fullmag-py-core",
  "crates/fullmag-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-build = { version = "2.5.1", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
pyo3 = { version = "0.23", features = ["macros", "abi3-py310"] }
