[package]
name = "fullmag-bench"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "fullmag-bench"
path = "src/main.rs"

[dependencies]
fullmag-engine = { path = "../fullmag-engine", features = ["parallel", "telemetry"] }
fullmag-fdm-demag = { path = "../fullmag-fdm-demag" }
fullmag-ir = { path = "../fullmag-ir" }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = "1.10"
