[package]
name = "fullmag-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["fullmag-runner/cuda"]
fem-gpu = ["fullmag-runner/fem-gpu"]

[[bin]]
name = "fullmag"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fullmag-engine = { path = "../fullmag-engine" }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-plan = { path = "../fullmag-plan" }
fullmag-runner = { path = "../fullmag-runner" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
libc = "0.2"
