[package]
name = "fullmag-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
parallel = ["dep:rayon"]
telemetry = []

[dependencies]
fullmag-ir = { path = "../fullmag-ir" }
fullmag-fdm-demag = { path = "../fullmag-fdm-demag" }
rustfft = "6.4"
rayon = { version = "1.10", optional = true }
