[package]
name = "fullmag-runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:fullmag-fdm-sys", "fullmag-fdm-sys/build-native"]
fem-gpu = ["dep:fullmag-fem-sys", "fullmag-fem-sys/build-native"]

[dependencies]
fullmag-engine = { path = "../fullmag-engine" }
fullmag-fdm-sys = { path = "../fullmag-fdm-sys", optional = true }
fullmag-fem-sys = { path = "../fullmag-fem-sys", optional = true }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-plan = { path = "../fullmag-plan" }
serde = { workspace = true }
serde_json = { workspace = true }
