[package]
name = "fullmag-runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:fullmag-fdm-sys", "fullmag-fdm-sys/build-native"]
fem-gpu = ["dep:fullmag-fem-sys", "fullmag-fem-sys/build-native"]

[dependencies]
fullmag-engine = { path = "../fullmag-engine", features = ["parallel"] }
fullmag-fdm-sys = { path = "../fullmag-fdm-sys", optional = true }
fullmag-fem-sys = { path = "../fullmag-fem-sys", optional = true }
fullmag-ir = { path = "../fullmag-ir" }
fullmag-plan = { path = "../fullmag-plan" }
rayon = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
