[package]
name = "fullmag-session"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true
libc = "0.2"
fullmag-ir = { path = "../fullmag-ir" }

[dev-dependencies]
tempfile = "3"
